# PyZ80

./: CHANGELOG.md  CPP_PLAN.md  CYTHON_PLAN.md  README.md  benchmark.py  benchmark_cpu.py  main.py  pyproject.toml  test_flags.py  update_imports.py
core/: __init__.py  bus.py  core.py  cpu.py  decoder.py  flags.py  pipeline.py  primitives.py  registers.py  state.py  tables.py  timing.py
core/instructions/: __init__.py  alu16.py  alu8.py  bit.py  block.py  jump.py  ld16.py  ld8.py  misc.py  opcodes.py
tests/: test_flags.py  test_validate_z80.py
tools/: check_opcodes.py
